<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <!-- details section of ui including image -->

<LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@string/movie_poster_cd"
        android:paddingStart="10dp"
        android:paddingTop="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

    <TextView
        android:fontFamily="@font/montereyflf"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="5dp"
        android:textSize="28sp"
        android:id="@+id/movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


        <TextView
            android:fontFamily="@font/montereyflf"
            android:textColor="@color/colorReviews"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="italic"
        android:id="@+id/movie_rel_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>

    <!-- favorites button -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/movie_avg_vote"
                android:layout_width="58dp"
                android:layout_height="57dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/favorites_button"
                android:layout_width="58dp"
                android:layout_height="57dp"
                android:layout_margin="7dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/add_string"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:gravity="center"
                android:layout_margin="7dp"
                android:id="@+id/trailer_content"
                android:layout_width="58dp"
                android:layout_height="57dp"
                android:background="@drawable/playbutton"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <TextView
            android:fontFamily="@font/montereyflf"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/avg_vote"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/montereyflf"
            android:id="@+id/faves_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/add_to_favs"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/montereyflf"
                android:layout_margin="3dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="5dp"
                android:text="@string/trailers_string"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/white"
            android:paddingBottom="5dp"/>

        <!-- description of movie -->

        <TextView
            android:fontFamily="@font/montereymediumflf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:paddingBottom="5dp"
            android:text="@string/movie_description_tv"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </ScrollView>
    </LinearLayout>

        <View
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="3dp" />

    <!-- reviews section of ui -->

    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/montereymediumflf"
            android:id="@+id/film_review_title"
            android:paddingStart="5dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/film_reviews_string"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

        <android.support.v7.widget.RecyclerView
            android:background="@color/colorPrimary"
            android:id="@+id/reviewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>